# NytegearUI

./: .gitignore  Cargo.toml
examples/: rectangle_widget.rs  simple_window.rs
src/: lib.rs  main.rs  window.rs
src/backends/: mod.rs
src/backends/opengl/: mod.rs  opengl_renderer.rs  shader.rs
src/backends/opengl/shaders/: ui_basic.frag  ui_basic.vert
src/layout/: dimension.rs  layout.rs  layout_manager.rs  mod.rs  position.rs  size.rs  spacing.rs
src/widget/: color.rs  mod.rs  renderer.rs  style.rs  widget.rs  window.rs
src/widget/util/: mod.rs  position.rs  sizing.rs
tests/: test_sizing.rs
